--- a/package.json
+++ b/package.json
@@ -3,10 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "history": "^4.7.2",
+    "immutable": "^4.0.0-rc.12",
+    "jquery": "^3.3.1",
     "node-sass": "^4.10.0",
+    "popper.js": "^1.14.6",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-document-title": "^2.0.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-redux": "^6.0.0",
+    "react-scripts": "2.1.1",
+    "reactstrap": "^6.5.0",
+    "redux": "^4.0.1",
+    "redux-little-router": "^15.1.2",
+    "redux-saga": "^0.16.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,5 +34,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-test-renderer": "^16.6.3"
+  }
 }
