--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "history": "^4.7.2",
     "immutable": "^4.0.0-rc.12",
     "jquery": "^3.3.1",
-    "node-sass": "^4.10.0",
+    "node-sass": "^4.11.0",
     "popper.js": "^1.14.6",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.6.3",
+    "react-media": "^1.9.2",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
     "redux-little-router": "^15.1.2",
-    "redux-saga": "^0.16.2"
+    "redux-saga": "^0.16.2",
+    "sass-loader": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
